--- a/src/styles.css
+++ b/src/styles.css
@@ -6,16 +6,16 @@ html, body {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: purple;
 }
 
 main {
   margin: auto;
   width: 50%;
-  padding: 20px;
+  padding: 50px;
 }
 
 main > h1 {
   text-align: center;
-  font-size: 3.5em;
+  font-size: 4em;
 }
